[project]
name = "serializers_test"
version = "0.1.0"
description = "Test API"
authors = [
    {name = "Josyway Paulo",email = "josywaypaulo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "pytest-django (>=4.10.0,<5.0.0)",
    "faker (>=36.1.1,<37.0.0)",
    "django-extensions (>=3.2.3)",
    "django-debug-toolbar (>=4.4.6)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
